# GammA7B_AR-v2.0

./: README.md  Untitled-1.sh  env.local.sh  pyproject.toml
configs/: stageA_manifest.yaml  stageA_manifest_dedup_latest.yaml  stageA_manifest_dedup_split.yaml  stageA_master_early.yaml  stageA_master_late.yaml
data/: normalized
gamma7b_data/: __init__.py  cli.py  config.py  dedup.py  filters.py  hf_configs.py  hf_stream.py  manifest.py  normalize.py  packing.py  repair_jsonl.py  sampling.py  schema.py  stackexchange.py  tokenization.py  utils.py  wikipedia.py
gamma7b_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gamma7b_train/: attn_plan.py  config.py  data_mmap.py  eval_smoke.py  model_gamma7b.py  optim.py  train.py
scripts/: 12_pack_stageA_from_dedup_latest.sh  12_sync_and_rededup_stageA_full.sh  30_train_spm_unigram_ultimate_v1.py  31_domain_histogram_dedup.py  32_eval_tokenizer_acceptance.py  32_split_dedup_by_domain.py  33_make_split_manifest.py  34_link_split_into_dataroot.sh  36_estimate_domain_yield.py  40_hf_export_wikipedia.py  41_hf_export_stackexchange.py  codex_add_split_script.sh  compare_mix.py  gamma_env.sh  hf_to_local_normalized.py  truncate_jsonl_zst.py
tests/: test_contract_hash_stable.py  test_data_root_resolution.py  test_dedup.py  test_dedup_accepts_id_field.py  test_dedup_discovers_jsonlzst.py  test_dedup_filters_manifest_json.py  test_dedup_near_duplicate_punct.py  test_dedup_near_selection_first_single_pass.py  test_dedup_per_source_scope.py  test_dedup_resume.py  test_hf_configs.py  (+19 more)
(+4 files in other folders)
